Fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -27,5 +27,6 @@ body {
   padding: 0;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
   font-family: "Roboto", "Segoe UI", "sans-serif";
 }
